--- a/style.css
+++ b/style.css
@@ -121,7 +121,7 @@ h1{
     width: 100%;
     height: 100vh;
    
-    background-image: url('refImages/kerala.jpg');
+    background-image: url('refImages/Kerala1.jpg');
     background-repeat: repeat-y;
     background-size: 100% 100%;
     background-attachment: fixed;
